# test28

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindCUnit.cmake
include/: exercises.h
src/: CMakeLists.txt  exercise001.c  exercise002.c  exercise003.c  exercise004.c
tests/: CMakeLists.txt  test_exercise001.c  test_exercise002.c  test_exercise003.c  test_exercise004.c  test_runner.c
